--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -48,4 +48,18 @@ jobs:
         name: awesome-calculator
         path: src/dist    
 
+  Post-Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: awesome-calculator
+          path: /dist
 
+      - name: Install Wheel
+        run: |
+          pip install /dist/*.whl
+          
+      
+        
