--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: awesome-calculator
-          path: /dist
+          path: ./src
 
       - name: Install Wheel
         run: |
